# gym-rl

./: .gitignore  README.md  intro_gym.ipynb  pyproject.toml  retro_gym.ipynb  taller_rl.ipynb
.venv_rl/: pyvenv.cfg
bala2/: bala2_env.py  bala2_env3.py  bala2env_old.py  gestion_modelos.ipynb  testing.py
bala2/arduino_bala/Bala2/: Bala2.ino
bala2/arduino_bala/Bala2_rl/: Bala2_rl.ino  README.md  bala2_env.py  gestion_modelos.ipynb  mi_modelo.cpp  model_data.h
