[project]
name = "gym-rl"
version = "0.1.0"
description = "Taller GDG - Reinforcement Learning aplicado a Hardware"
requires-python = ">=3.11, <3.13"
dependencies = [
    "gymnasium[classic-control]==1.0.0",
    "stable-baselines3==2.4.1",
    "torch>=2.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "ipykernel>=6.25.0",
    "stable-retro>=1.0.0",
    "opencv-python>=4.11.0.86",
]
